--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -57,7 +57,6 @@
     .left-text {
         text-align: left; /* テーブルセル内で左寄せ */
     }
-    
         
 
 
@@ -66,11 +65,11 @@
    
 
   <div th:replace="fragmentC::headerC"></div>
-<div style="width: 500px;">
+  <div style="width: 500px;">
+
   <table class="left">
     <tr><td><h2><span th:text="${product.productName}"></span></h2></td></tr>
-  </table>
-
+ <table>
   <table class="center">
     <tr><td><img th:src="@{/img/__${product.imageUrl}__}"  class="image-size" ></td></tr>
  </table>
@@ -87,16 +86,16 @@
         </td>
     </tr>
     
-    
+    <form  th:action="@{/customer/purchaseproduct/input}" method="get" th:object="${orderDetailForm}">
     
     <tr>
         <td><p class="align-left">数量</p>
-            <select id = "quantities" name="quantity"  class="large-select">
+            <select id = "quantities" name="quantity"  class="large-select" th:field="*{count}">
                
                 <option th:each="num : ${quantities}"
                     th:value="${num}"
                     th:text="${num}"
-                    th:selected="${num == 0}">
+                    th:selected="${num == 1}">
                 </option>
             </select>
         </td>
@@ -109,7 +108,12 @@
 
 
     <!-- <p><span th:text="${product.productStock.quantity}"></span></p> -->
+    <input type="hidden" name="productId" th:value="${product.productId}">
+    <input type="hidden" name="productName" th:value="${product.productName}">
+    <input type="hidden" name="price" th:value="${product.price}">
+   
 </table>
+</form>
 </div>
 </div>
 
