--- a/src/main/resources/templates/fragmentC.html
+++ b/src/main/resources/templates/fragmentC.html
@@ -20,7 +20,7 @@
                     <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                         <a href="/customer/top" style="color: white; margin-right: 10px;text-decoration: none;">🖊文具/雑貨販売フロント</a>
                     </div>
-                    <a href="/customer/serarchproduct" style="color: rgb(220, 220, 220); margin-right: 10px;text-decoration: none;">商品検索</a>
+                    <a href="/customer/searchproduct" style="color: rgb(220, 220, 220); margin-right: 10px;text-decoration: none;">商品検索</a>
                     <!-- <input type="text" name="productName" placeholder="商品検索" style="flex-grow: 1; margin-left: 10px;min-width: 20px;"> -->
                 </form>
             </div>
