--- a/src/main/resources/templates/purchase/confirm.html
+++ b/src/main/resources/templates/purchase/confirm.html
@@ -11,16 +11,17 @@
     <div th:replace="fragmentC::headerC"></div>
 
     <div>
-        <h1>購入（確認）</h1>
+        <h1>購入確認</h1>
         <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION'] != null}" class="error">
             <span th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></span>
         </div>
-        <form th:action="@{/customer/searchproduct}" method="get">
-            <input type="submit" value="買い物を続ける">
-        </form>
-        <form th:action="@{/customer/purchaseproduct/execute}" method="post" th:object="${orderDetailFormList}">
+        <div style="text-align: right;width:80%;padding-bottom:10px;">
+            <form th:action="@{/customer/searchproduct}" method="get" >
+                <input type="submit" value="買い物を続ける" style="color: white; background-color: #007bff;border: 2px solid transparent;border-radius: 5px;">
+            </form>
+        </div>
             
-             <table  style="margin: 0 auto;" border="1">
+             <table  border="1" style="margin: 0 auto;border-collapse: collapse;width: 60%;">
                 <tr>
                     <th>商品名</th>
                     <th>価格</th>
@@ -32,29 +33,31 @@
                     <td th:text="${od.count}"></td>
                   </tr>
                 </table>
-            <h2>合計：<a th:text="${sum}"></a></h2>
-            <br>
-            <h2>支払方法</h2>
-            <br>
-
-            <select name="paymentMethod">
-                <option th:each="paymentMethod : ${paymentMethods}" th:id="paymentMethod" th:name="paymentMethod" th:value="${paymentMethod.payMethodId}">[[${paymentMethod.payMethodName}]]</option>
+            <h2>合計：<a th:text="${sum}"></a>円</h2>
+            <h2>支払い方法</h2>
+            <p>
+            <select name="paymentMethod" style="width:50%;height:30px;" form="execute">
+                <option th:each="paymentMethod : ${paymentMethods}" th:id="paymentMethod" th:name="paymentMethod" th:value="${paymentMethod.payMethodId}" >[[${paymentMethod.payMethodName}]]</option>
             </select>
-            
+        </p>
             <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> -->
 
-            <p>
-                
-                <a>
-                    <input type="submit" value="購入確認へ">
+        <table style="margin: 0 auto;">
+            <tr>
+                <td style="width:210px;">
+                    <form th:action="@{/customer/purchaseproduct/input}" method="get" >
+                        <input type="submit" value="戻る" style="color: white; background-color: #007bff;border: 2px solid transparent;border-radius: 5px;width:200px;">
                     </form>
-                    <a>
-                        <form th:action="@{/customer/purchaseproduct/input}" method="get">
-                            <input type="submit" value="戻る">
-                        </form>
-                    </a>
-                </a>
-            </p>
+                </td>
+                <td style="width:210px;">
+                    <form id="execute" th:action="@{/customer/purchaseproduct/execute}" method="post" th:object="${orderDetailFormList}">
+                        <input type="submit" value="購入確定" style="color: white; background-color: #007bff;border: 2px solid transparent;border-radius: 5px;width:200px;">
+                    </form>
+                </td>
+            </tr>
+        </table>
+        
+        
     </div>
     
     <div th:replace="fragmentC::footerC"></div>
