--- a/src/main/resources/templates/purchase/input.html
+++ b/src/main/resources/templates/purchase/input.html
@@ -10,20 +10,22 @@
 <body>
     <div th:replace="fragmentC::headerC"></div>
 
-    <div>
+    <div th:if="${orderDetailFormList.size()>0}">
         <h1>購入（入力）</h1>
         <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION'] != null}" class="error">
             <span th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></span>
         </div>
 
+        <div style="text-align: right;width:80%;padding-bottom:10px;">
         <form id="continueShoppingForm" th:action="@{/customer/searchproduct}" method="get">
             <input type="hidden" id="ContinueShoppingData" name="orderDetailFormList" />
-            <input type="submit" value="買い物を続ける" onclick="submitContinueForm()" />
+            <input type="submit" value="買い物を続ける" onclick="submitContinueForm()" style="color: white; background-color: #007bff;border: 2px solid transparent;border-radius: 5px;" />
         </form>
+        </div>
 
-        <form id="mainForm" th:action="@{/customer/purchaseproduct/confirm}" method="post">
+        <form  id="mainForm" th:action="@{/customer/purchaseproduct/confirm}" method="post">
         
-             <table  style="margin: 0 auto;" border="1">
+             <table border="1" style="margin: 0 auto;border-collapse: collapse;width: 60%;">
                 <tr>
                     <th>商品名</th>
                     <th>価格</th>
@@ -39,15 +41,18 @@
                             </select>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-danger" th:attr="onclick='deleteProduct(' + ${od.productId} + ')'">削除</button>
+                            <button type="button" class="btn btn-danger" th:attr="onclick='deleteProduct(' + ${od.productId} + ')'" style="color: white; background-color: #007bff;border: 2px solid transparent;border-radius: 5px;">削除</button>
                         </td>    
                   </tr>
                 </table>
             
             <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> -->
-
-            <input type="submit" value="購入確認へ">
+            <br>
+            <input type="submit" value="購入確認へ" style="color: white; background-color: #007bff;border: 2px solid transparent;border-radius: 5px;width:50%">
         </form>
+            </div>
+        <p th:if="${orderDetailFormList.size()==0}" style="text-align:center;">カートに商品が入っていません</p>
+    
         <form id="deleteForm" th:action="@{/customer/purchaseproduct/delete}" method="get" style="display: none;">
             <input type="hidden" name="productId" id="deleteProductId">
         </form>
@@ -69,7 +74,7 @@
                 }
             }
         </script>
-    </div>
+    
     
     <div th:replace="fragmentC::footerC"></div>
 </body>
