アカウント登録リンク追加

--- a/src/main/resources/templates/loginCustomer.html
+++ b/src/main/resources/templates/loginCustomer.html
@@ -27,7 +27,9 @@
                 </tr>
             </table>
             <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> -->
-            <input type="submit" value="ログイン">
+            <input type="submit" value="ログイン"><br>
+            <a href="#">アカウント登録</a>
+            
         </form>
     </div>
     
