--- a/src/main/resources/templates/order/history/backend.html
+++ b/src/main/resources/templates/order/history/backend.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品検索画面</title>
+    <title>購入履歴検索画面</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
   <div th:replace="fragment::header"></div>
   <div>
-    <h1> 購入履歴一覧 </h1>
+    <h1> 購入履歴検索</h1>
     <form th:action="@{/admin/history}" method="get">
         <table>
             <tr>
@@ -93,7 +93,9 @@
         <a th:if="${not orders.last}" th:href="@{__${pageUrl}__page=__${orders.totalPages}__}">最後</a>
       </li>
     </ul>
+    <a href="/admin/menu" class="menu">メニューに戻る</a>
   </div>
+
   <div th:replace="fragment::footer"></div>
 </body>
 </html>
