--- a/src/main/resources/templates/order/updatestatus/confirm.html
+++ b/src/main/resources/templates/order/updatestatus/confirm.html
@@ -37,7 +37,7 @@
         </table>
         <a href="/admin/history">購入履歴検索に戻る</a>
         <input type="hidden" name="statusId" id="statusId" th:value="${status.orderStatusId}">
-        <input type="submit" value="登録">
+        <input type="submit" value="完了">
     </form>
     <a href="/admin/menu">メニューに戻る</a>
   </div>
