--- a/src/main/resources/templates/customer/register/input.html
+++ b/src/main/resources/templates/customer/register/input.html
@@ -21,9 +21,18 @@
                     <td style="text-align:left;width:20%;">
                         <input type="text" th:field="${CustomerForm.customerName}" placeholder="山田 太郎" style="width:90%;">
                     </td>
+                    
                     <td style="text-align:left;width:20%;">氏名カナ</td>
                     <td style="text-align:left;width:20%;">
                         <input type="text" th:field="${CustomerForm.customerNameKana}" placeholder="ヤマダ タロウ" style="width:90%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}"></span>
+                    </td>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerNameKana')}" th:errors="*{customerNameKana}"></span>
                     </td>
                 </tr>
                 <tr>
@@ -37,6 +46,14 @@
                     </td>
                 </tr>
                 <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerAddress1')}" th:errors="*{customerAddress1}"></span>
+                    </td>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerAddress2')}" th:errors="*{customerAddress2}"></span>
+                    </td>
+                </tr>
+                <tr>
                     <td style="text-align:left;width:20%;">電話番号</td>
                     <td style="text-align:left;width:20%;">
                         <input type="text" th:field="${CustomerForm.customerPhoneNumber}" placeholder="03-1111-1111" style="width:90%;">
@@ -44,6 +61,14 @@
                     <td style="text-align:left;width:20%;">メールアドレス</td>
                     <td style="text-align:left;width:20%;">
                         <input type="text" th:field="${CustomerForm.customerMailAdress}" placeholder="taro@example.com" style="width:90%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerPhoneNumber')}" th:errors="*{customerPhoneNumber}"></span>
+                    </td>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerMailAdress')}" th:errors="*{customerMailAdress}"></span>
                     </td>
                 </tr>
                 <tr>
@@ -56,7 +81,14 @@
                         <input type="password" th:field="${CustomerForm.customerPassword}" placeholder="(半角英数字)5~20文字" style="width:90%;">
                     </td>
                 </tr>
-                
+                <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerUsername')}" th:errors="*{customerUsername}"></span>
+                    </td>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('customerPassword')}" th:errors="*{customerPassword}"></span>
+                    </td>
+                </tr>
             
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
