--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -144,7 +144,7 @@
                     th:action="@{/customer/productDetails}"
                     method="get">
                     <input type="hidden" name="productId" th:value="${product.productId}">
-                    <button type="submit" class="btn btn-warning">詳細をみる</button>
+                    <button type="submit" class="btn btn-warning" style="text-decoration: none; color: white; background-color: #007bff; padding: 10px 15px; border-radius: 5px;">詳細をみる</button>
                 </form>
   
                     <!-- <a th:href="@{/customer/productDetails/{id}(id=${product.productId})}" 
