--- a/src/main/resources/templates/account/register/input.html
+++ b/src/main/resources/templates/account/register/input.html
@@ -12,9 +12,8 @@
         <h1>アカウント登録（入力）</h1>
         <form th:action="@{/admin/registeraccount/confirm}" method="post" th:object="${employeeForm}">
             <div class="error">
-                <p th:if="${#fields.hasErrors('global')}" th:each="error : ${#fields.errors('global')}" th:text="${error}">
-                </p>
-        </div>
+                <p th:if="${#fields.hasErrors('global')}" th:each="error : ${#fields.errors('global')}" th:text="${error}"></p>
+            </div>
             <table style="margin: 0 auto;">
                 <tr>
                     <td style="text-align:center;">社員名</td>
