--- a/src/main/resources/templates/customer/register/input.html
+++ b/src/main/resources/templates/customer/register/input.html
@@ -10,7 +10,7 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>アカウント登録</h1>
-        <form th:action="@{/customer/registercustomer/confirm}" method="post" th:object="${CustomerForm}">
+        <form th:action="@{/customer/registercustomer/confirm}" method="post" th:object="${customerForm}">
             <div class="error">
                 <p th:if="${#fields.hasErrors('global')}" th:each="error : ${#fields.errors('global')}" th:text="${error}">
                 </p>
@@ -19,12 +19,12 @@
                 <tr>
                     <td style="text-align:left;width:20%;">氏名</td>
                     <td style="text-align:left;width:20%;">
-                        <input type="text" th:field="${CustomerForm.customerName}" placeholder="山田 太郎" style="width:90%;">
+                        <input type="text" th:field="${customerForm.customerName}" placeholder="山田 太郎" style="width:90%;">
                     </td>
                     
                     <td style="text-align:left;width:20%;">氏名カナ</td>
                     <td style="text-align:left;width:20%;">
-                        <input type="text" th:field="${CustomerForm.customerNameKana}" placeholder="ヤマダ タロウ" style="width:90%;">
+                        <input type="text" th:field="${customerForm.customerNameKana}" placeholder="ヤマダ タロウ" style="width:90%;">
                     </td>
                 </tr>
                 <tr>
@@ -38,11 +38,11 @@
                 <tr>
                     <td style="text-align:left;width:20%;">住所１</td>
                     <td style="text-align:left;width:20%;">
-                        <input type="text" th:field="${CustomerForm.customerAddress1}" placeholder="東京都渋谷区1-11-1" style="width:90%;">
+                        <input type="text" th:field="${customerForm.customerAddress1}" placeholder="東京都渋谷区1-11-1" style="width:90%;">
                     </td>
                     <td style="text-align:left;width:20%;">住所２</td>
                     <td style="text-align:left;width:20%;">
-                        <input type="text" th:field="${CustomerForm.customerAddress2}" placeholder="マンション渋谷101号室" style="width:90%;">
+                        <input type="text" th:field="${customerForm.customerAddress2}" placeholder="マンション渋谷101号室" style="width:90%;">
                     </td>
                 </tr>
                 <tr>
@@ -56,11 +56,11 @@
                 <tr>
                     <td style="text-align:left;width:20%;">電話番号</td>
                     <td style="text-align:left;width:20%;">
-                        <input type="text" th:field="${CustomerForm.customerPhoneNumber}" placeholder="03-1111-1111" style="width:90%;">
+                        <input type="text" th:field="${customerForm.customerPhoneNumber}" placeholder="03-1111-1111" style="width:90%;">
                     </td>
                     <td style="text-align:left;width:20%;">メールアドレス</td>
                     <td style="text-align:left;width:20%;">
-                        <input type="text" th:field="${CustomerForm.customerMailAdress}" placeholder="taro@example.com" style="width:90%;">
+                        <input type="text" th:field="${customerForm.customerMailAdress}" placeholder="taro@example.com" style="width:90%;">
                     </td>
                 </tr>
                 <tr>
@@ -74,11 +74,11 @@
                 <tr>
                     <td style="text-align:left;">アカウント名</td>
                     <td style="text-align:left;">
-                        <input type="text" th:field="${CustomerForm.customerUsername}" placeholder="(半角英数字)5~20文字" style="width:90%;">
+                        <input type="text" th:field="${customerForm.customerUsername}" placeholder="(半角英数字)5~20文字" style="width:90%;">
                     </td>
                     <td style="text-align:left;">パスワード</td>
                     <td style="text-align:left;">
-                        <input type="password" th:field="${CustomerForm.customerPassword}" placeholder="(半角英数字)5~20文字" style="width:90%;">
+                        <input type="password" th:field="${customerForm.customerPassword}" placeholder="(半角英数字)5~20文字" style="width:90%;">
                     </td>
                 </tr>
                 <tr>
