--- a/src/main/resources/templates/error/adminError.html
+++ b/src/main/resources/templates/error/adminError.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns:th="http://www.thymeleaf.org">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,12 +11,9 @@
 <body>
     <div th:replace="fragment::header"></div>
 
-    <div>
-        <h1>システムエラー</h1>
+    <h1 style="text-align: center;">システムエラー</h1>
         
-        <p style="text-align:center;">エラーが発生しました。システム管理者に連絡してください。</p>
-        
-    </div>
+    <div>エラーが発生しました。システム管理者に連絡してください。</div>
     
     <div th:replace="fragment::footer"></div>
 </body>
