--- a/src/main/resources/templates/customer/register/input.html
+++ b/src/main/resources/templates/customer/register/input.html
@@ -15,7 +15,7 @@
                 <p th:if="${#fields.hasErrors('global')}" th:each="error : ${#fields.errors('global')}" th:text="${error}">
                 </p>
             </div>
-            <table style="margin: 0 auto;">
+            <table style="margin: 0 auto;width: 70%;">
                 <tr>
                     <td style="text-align:left;width:20%;">氏名</td>
                     <td style="text-align:left;width:20%;">
@@ -27,7 +27,7 @@
                         <input type="text" th:field="${customerForm.customerNameKana}" placeholder="ヤマダ タロウ" style="width:90%;">
                     </td>
                 </tr>
-                <tr>
+                <tr style="height: 5%;">
                     <td colspan="2">
                         <span class="error" th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}"></span>
                     </td>
@@ -35,7 +35,7 @@
                         <span class="error" th:if="${#fields.hasErrors('customerNameKana')}" th:errors="*{customerNameKana}"></span>
                     </td>
                 </tr>
-                <tr>
+                <tr style="height: 5%;">
                     <td style="text-align:left;width:20%;">住所１</td>
                     <td style="text-align:left;width:20%;">
                         <input type="text" th:field="${customerForm.customerAddress1}" placeholder="東京都渋谷区1-11-1" style="width:90%;">
@@ -45,7 +45,7 @@
                         <input type="text" th:field="${customerForm.customerAddress2}" placeholder="マンション渋谷101号室" style="width:90%;">
                     </td>
                 </tr>
-                <tr>
+                <tr style="height: 5%;">
                     <td colspan="2">
                         <span class="error" th:if="${#fields.hasErrors('customerAddress1')}" th:errors="*{customerAddress1}"></span>
                     </td>
@@ -63,7 +63,7 @@
                         <input type="text" th:field="${customerForm.customerMailAdress}" placeholder="taro@example.com" style="width:90%;">
                     </td>
                 </tr>
-                <tr>
+                <tr style="height: 5%;">
                     <td colspan="2">
                         <span class="error" th:if="${#fields.hasErrors('customerPhoneNumber')}" th:errors="*{customerPhoneNumber}"></span>
                     </td>
@@ -81,7 +81,7 @@
                         <input type="password" th:field="${customerForm.customerPassword}" placeholder="(半角英数字)5~20文字" style="width:90%;">
                     </td>
                 </tr>
-                <tr>
+                <tr style="height: 5%;">
                     <td colspan="2">
                         <span class="error" th:if="${#fields.hasErrors('customerUsername')}" th:errors="*{customerUsername}"></span>
                     </td>
