--- a/src/main/resources/templates/customer/register/confirm.html
+++ b/src/main/resources/templates/customer/register/confirm.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-    <div th:replace="fragment::header"></div>
+    <div th:replace="fragmentC::headerC"></div>
     <div>
         <h1>アカウント登録(確認)</h1>
         <form th:action="@{/customer/registercustomer/execute}" method="get" th:object="${customerForm}">
@@ -64,6 +64,6 @@
             
         </form>
     </div>
-    <div th:replace="fragment::footer"></div>
+    <div th:replace="fragmentC::footerC"></div>
 </body>
 </html>
