--- a/src/main/resources/templates/loginCustomer.html
+++ b/src/main/resources/templates/loginCustomer.html
@@ -28,7 +28,7 @@
             </table>
             <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> -->
             <input type="submit" value="ログイン"><br>
-            <a href="#">アカウント登録</a>
+            <a href="/customer/registercustomer/input">アカウント登録</a>
             
         </form>
     </div>
